--- a/static/global.css
+++ b/static/global.css
@@ -1,9 +1,15 @@
+html {
+	height: 100vh;
+}
+
 body {
 	margin: 0;
 	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	font-size: 14px;
 	line-height: 1.5;
 	color: #333;
+    box-sizing: border-box;
+    background-color: hsl(-138deg, 50%, 40%);
 }
 
 h1, h2, h3, h4, h5, h6 {
