--- a/static/global.css
+++ b/static/global.css
@@ -1,16 +1,29 @@
+* {
+	box-sizing: border-box;
+}
+
+#sapper {
+	height: 100%;
+}
+
 html {
 	height: 100vh;
-	font-size: 22px;
+	font-size: 25px;
 }
 
 body {
 	margin: 0;
-	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-	font-size: 14px;
-	line-height: 1.5;
-	color: #333;
+	font-family: "Georgia", Serif;
+	font-size: 20px;
+	line-height: 1.25;
     box-sizing: border-box;
-    background-color: hsl(-138deg, 50%, 40%);
+    /* background-color: hsl(-138deg, 50%, 40%); */
+}
+
+p {
+	font-size: 20px;
+	line-height: 1.25;
+	margin: 0 0 1rem 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -23,23 +36,18 @@ h1 {
 	font-size: 2rem;
 }
 
+h2 {
+    border-bottom: 6px solid hsl(40deg, 50%, 90%);
+    display: inline-block;
+    line-height: 0.68;
+  }
+
+h3 {
+	font-weight: bold;
+}
+
 a {
 	color: inherit;
-}
-
-code {
-	font-family: menlo, inconsolata, monospace;
-	font-size: calc(1em - 2px);
-	color: #555;
-	background-color: #f0f0f0;
-	padding: 0.2em 0.4em;
-	border-radius: 2px;
-}
-
-@media (min-width: 400px) {
-	body {
-		font-size: 16px;
-	}
 }
 
 .red {
@@ -47,8 +55,29 @@ code {
 }
 
 button {
-	border-radius: 0%;
-background-color: white;
-border: 1.5px solid black;
-padding: 1rem;
+	font-size: 20px;
+	line-height: 1;
+	padding: 0.5rem;
+	border-radius: none;
+	background-color: white;
+	border: 1.5px solid black;
+}
+
+.pane-wrapper {
+	box-sizing: border-box;
+	height: 100vh;
+	width: 100vw;
+	display: grid;
+	justify-content: center;
+	margin: 1rem;
+}
+
+.pane {
+	padding: 1rem;
+    background-color: #fff;
+    max-width: 20em;
+}
+
+.pane-wrapper .pane {
+	grid-column: 2 / 3;
 }
