--- a/static/global.css
+++ b/static/global.css
@@ -1,141 +1,159 @@
 :root {
-	--game-bg: hsl(225, 46%, 24%);
-	--game-bg-light: hsl(225, 46%, 75%);
-	--game-bg-lightest: hsl(225, 46%, 90%);
-	--white: hsl(210, 10%, 100%);
-	--cream: hsl(64, 32%, 90%);
-	--selected-yellow: rgba(255, 208, 0, 0.8);
-	--snap-orange: hsl(16, 100%, 50%);
-	--snap-orange-light: hsl(16, 100%, 70%);
-	--snap-orange-lightest: hsl(16, 100%, 95%);
-	--viewing-blue: hsl(210, 100%, 50%);
-	--viewing-blue-light: hsl(210, 100%, 70%);
-	--viewing-blue-lightest: hsl(210, 100%, 95%);
-	--controls-width: 14.5rem;
+  --game-bg: hsl(225, 46%, 24%);
+  --game-bg-light: hsl(225, 46%, 75%);
+  --game-bg-lightest: hsl(225, 46%, 90%);
+  --white: hsl(210, 10%, 100%);
+  --cream: hsl(64, 32%, 90%);
+  --selected-yellow: rgba(255, 208, 0, 0.8);
+  --snap-orange: hsl(16, 100%, 50%);
+  --snap-orange-light: hsl(16, 100%, 70%);
+  --snap-orange-lightest: hsl(16, 100%, 95%);
+  --viewing-blue: hsl(210, 100%, 50%);
+  --viewing-blue-light: hsl(210, 100%, 70%);
+  --viewing-blue-lightest: hsl(210, 100%, 95%);
+  --controls-width: 14.5rem;
 }
 
 @font-face {
-	font-family: Rubik;
-	src: url('Rubik-Regular.woff2') format('woff2');
+  font-family: Rubik;
+  src: url("Rubik-Regular.woff2") format("woff2");
 }
 
 @font-face {
-	font-family: Rubik;
-	src: url('Rubik-ExtraBold.woff2') format('woff2');
-	font-weight: 800;
+  font-family: Rubik;
+  src: url("Rubik-ExtraBold.woff2") format("woff2");
+  font-weight: 800;
 }
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 #sapper {
-	height: 100%;
+  height: 100%;
 }
 
 html {
-	height: 100vh;
-	font-family: Rubik, sans-serif;
-	font-size: 25px;
+  height: 100vh;
+  font-family: Rubik, sans-serif;
+  font-size: 25px;
 }
 
 body {
-	margin: 0;
-	font-size: 20px;
-	line-height: 1.25;
-    box-sizing: border-box;
+  margin: 0;
+  font-size: 20px;
+  line-height: 1.25;
+  box-sizing: border-box;
+  color: var(--game-bg);
 }
 
 p {
-	font-size: 20px;
-	line-height: 1.25;
-	margin: 0 0 1rem 0;
+  font-size: 20px;
+  line-height: 1.25;
+  margin: 0 0 1rem 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-	margin: 0 0 0.5em 0;
-	font-weight: 400;
-	line-height: 1.2;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0 0 0.5rem 0;
+  font-weight: 800;
+  line-height: 1.2;
 }
 
 h1 {
-	font-size: 2rem;
-	font-weight: 800;
-	color: var(--game-bg);
+  font-size: 2rem;
+  color: var(--game-bg);
 }
 
 h2 {
-    border-bottom: 6px solid var(--off-white);
-    display: inline-block;
-    line-height: 0.68;
-  }
+  border-bottom: 6px solid var(--off-white);
+  display: inline-block;
+  line-height: 0.68;
+  margin: 0 0 1rem 0;
+}
 
 h3 {
-	font-weight: bold;
+  font-weight: bold;
 }
 
 a {
-	color: inherit;
+  color: inherit;
 }
 
 .red {
-    fill: red;
+  fill: red;
 }
 
 button,
 input {
-	font-family: Rubik;
-	font-size: 20px;
-	line-height: 1;
-	padding: 0.5rem;
-	border-radius: 0.25rem;
-	background-color: var(--white);
-	color: var(--game-bg);
-	border: 2px solid var(--game-bg);
+  font-family: Rubik;
+  font-size: 20px;
+  line-height: 24px;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  background-color: var(--white);
+  color: var(--game-bg);
+  border: 2px solid var(--game-bg);
 }
 
 input {
-	font-weight: 800;
-	letter-spacing: 1px;
+  font-weight: 800;
+  letter-spacing: 1px;
 }
 
 button:hover,
 input:hover {
-	background-color: var(--game-bg-lightest);
+  background-color: var(--game-bg-lightest);
 }
 
 button:active,
 button:focus,
 input:active,
 input:focus {
-	background-color: var(--game-bg-light);
-	outline-style: dashed;
-	outline-width: 2px;
-	outline-color: var(--game-bg);
-	outline-offset: 2px;
+  background-color: var(--game-bg-light);
+  outline-style: dashed;
+  outline-width: 2px;
+  outline-color: var(--game-bg);
+  outline-offset: 2px;
+}
+
+::placeholder {
+  color: var(--game-bg-light);
 }
 
 label {
-	display: block;
-	font-size: 16px;
-	margin: 0 0 0.5rem;
+  display: block;
+  font-size: 18px;
+  margin: 0 0 0.5rem;
 }
 
-.pane-wrapper {
-	box-sizing: border-box;
-	height: 100vh;
-	width: 100vw;
-	display: grid;
-	justify-content: center;
-	margin: 1rem;
+.input-pair {
+  display: flex;
+}
+
+.input-pair input[type="text"] {
+  min-width: 0;
+  flex: 1;
+  margin-right: 0.25rem;
+}
+
+@media (max-width: 460px) {
+  .input-pair {
+    display: block;
+  }
+
+  .input-pair input[type="text"] {
+    margin-bottom: 0.25rem;
+    width: 100%;
+  }
 }
 
 .pane {
-	padding: 1rem;
-    background-color: #fff;
-    max-width: 20em;
-}
-
-.pane-wrapper .pane {
-	grid-column: 2 / 3;
+  padding: 1rem;
+  max-width: 20rem;
+  margin: 0 auto;
 }
